--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /* global styling*/
 html{
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'noto sans', sans-serif;
   margin: 0rem 2rem;
-  background-color: #ffffff;
+  background-color: #659DBD;;
 }
 
 /* Banner image*/
@@ -33,22 +33,25 @@ nav ul li{
   display: inline-block;
   font-size: 1rem;
 }
+nav{position: sticky;
+   top: 0;
+    }
 
 /* the nav text */
 nav li a{
   display: block;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 18px 20px;
   text-decoration: none;
 }
 
 nav li:hover{
-  background-color: orangered;
+  background-color: #595959;
 }
 
 nav #active{
-  background-color: darkgreen;
+  background-color: #c95213;
 }
 
 /* Styling for the main section*/
@@ -60,8 +63,8 @@ main{
 
 /* H1 uses a google font. Check out https://www.w3schools.com/howto/howto_google_fonts.asp to change - also see line 9 in your html page*/
 h1 {
-  color: darkblue;
-  font-family: 'Caesar Dressing';
+  color: black;
+  font-family: 'noto sans', sans-serif;
   font-size: 60px;
   text-align: center;
   margin-bottom: 1rem;
@@ -69,6 +72,7 @@ h1 {
 
 h2 {
   color: black;
+  font-family:;
   font-size: 30px;
   text-align: center;
 }
@@ -77,12 +81,17 @@ p {
   color: black;
   font-size: 14px;
   text-align: center;
+  font-family: 'noto sans', sans-serif;
+}
+
+h5 {
+  color: black;
+  text-align: center;
 }
 
 /* Styling for the image container and the items inside it */
 .container{
-  display: flex; 
-  flex-wrap: wrap; 
+  display: flex;
   align-items: center; 
   justify-content: center; 
 }
